PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 6.2.1
23 February 2016

- phodevi: Extra Vulkan information reporting
- phodevi: Add OpenCL version reporting to system software string
- perf_per_dollar: Fix for uninitialized test_result object

Phoronix Test Suite 6.2-Gamvik
16 February 2016

- pts_Graph: Fixes
- pts_Graph: Support for branded colors on more graphs
- phodevi: plumbing Vulkan
- matisk: Fixes

Phoronix Test Suite 6.2 Milestone 5
5 February 2016

- pts-core: Add golang as possible external dependency
- phodevi: Optimization for slightly faster start-up time
- phoromatic: Add WoL details to the maintenace table page
- phodevi: Sensor clean-up and fixes  (Jakub Maleszewski)
- matisk: Restore the MATISK module for testing  (Jakub Maleszewski)

Phoronix Test Suite 6.2 Milestone 4
26 January 2016

- pts-core: Fix for some test profiles not showing up in list-tests sub-command
- pts-core: Add function for optionally removing unchanged results
- pts-core: Add function for optionally removing noisy results
- pts-core: Rework PDF generation of test results
- phoromatic: Add option to result viewer for exposing possible points of interest
- phoromatic: Add view_results_since support to the export results viewer
- pts_Graph: Fix for graphs sometime not rendering correctly on multi-way comparisons

Phoronix Test Suite 6.2 Milestone 3
7 January 2016

- pts-core: Add system to default list of repositories
- pts-core: Allow result graph footnotes to be added during test time by writing to ~/pts-footnote
- pts-core: Optimize array usage along hot paths
- pts-core: Add httpd as a possible external dependency
- pts_Graph: Rendering fix for collision of result identifiers
- phoromatic: Add LimitNetworkCommunication option
- phoromatic: Fix in listing tests on schedules page when dealing with cache mismatch
- deploy: JuJu update from upstream

Phoronix Test Suite 6.2 Milestone 2
2 January 2016
